# template-deno-wasm-rust-library

./: .gitignore  Cargo.toml  README.md  deps.ts
.github/workflows/: check-deno-wasm-rust-dependencies.yml  run-deno-wasm-rust-docs-and-tests.yml
images/: uml_diagram.mermaid
src/: lib.rs  lib.ts
tests/: integration_test.rs  world_test.ts
