[package]
name = "flowscripter_template_deno_wasm_rust_library"
version ="0.0.0"
edition = "2021"
description = "Project template for a Rust library compiled to WASM exposed as a Deno module."
homepage = "https://github.com/flowscripter"
license = "MIT"
repository = "https://github.com/flowscripter/template-deno-wasm-rust-library"
exclude = [".github/"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
wasm-bindgen = "0.2.96"
flowscripter_template_rust_library = "1.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.46"
